Add coach icon to context panel

--- a/index.html
+++ b/index.html
@@ -208,6 +208,152 @@
     <img src="https://www.smithsonianmag.com/static/smithsonianmag/img/smithmag-logo-horizontal-white.98dddd9f3f4d.svg" alt="Smithsonian Magazine Logo" class="h-7 mx-auto">
   </div>
 
+  <!-- Inquiry workbook + Coach panel -->
+  <section class="bg-slate-900 text-white py-8">
+    <div class="max-w-6xl mx-auto px-4 lg:px-6">
+      <div class="lg:grid lg:grid-cols-[minmax(0,2.2fr)_minmax(0,1fr)] gap-6">
+        <div class="space-y-4">
+          <section id="mission" aria-labelledby="mission-title"
+            data-coach-help='{"where":"Mission","tips":["Goal: Decide if the Munsee Lenape benefited from the sale of Manhattan.","Work in order: A then B then C then D then write RACE.","Use highlights and cite short quotes with quotation marks."],"stems":["My job today is to ","I will check each source for ","My claim will be that "]}'
+            class="rounded-xl border border-white/10 bg-white/5 p-4">
+            <div class="flex items-center justify-between gap-3">
+              <h2 id="mission-title" class="text-lg font-semibold text-white">Mission</h2>
+              <span class="text-xs uppercase tracking-wide text-white/60">Start here</span>
+            </div>
+            <p class="mt-3 text-sm text-white/80">
+              Decide if the Munsee Lenape people truly benefited from the 1626 sale of Manhattan. Use every source to gather evidence before writing your RACE response.
+            </p>
+            <p class="mt-2 text-sm text-white/70">
+              Highlight important quotes, dates, and locations. Capture ideas in the notes under each source so you can cite them accurately later.
+            </p>
+            <ul class="mt-3 text-sm text-white/80 list-disc space-y-1 ml-5">
+              <li>Read the mission first so you know the claim you must prove or disprove.</li>
+              <li>Open each source, annotate key details, and summarize what it shows about Dutch and Munsee priorities.</li>
+              <li>After all sources, craft a RACE response that uses specific evidence.</li>
+            </ul>
+          </section>
+
+          <section id="source-a" data-coach-section="Source A"
+            data-coach-help='{"where":"Source A","tips":["Sourcing: Who wrote it, when, where, and why.","Evidence: Quote numbers or goods that show priorities.","Bias: Company voice. Think bragging and profit goals."],"stems":["The author is ","It was written in ","The purpose is to ","One key detail is ","This may be biased because "],"model":"The Schaghen letter aims to report success to leaders, so it highlights profit and may leave out Native views."}'
+            class="rounded-xl border border-white/10 bg-white/5 p-4">
+            <header class="flex flex-wrap items-start justify-between gap-3">
+              <h3 class="text-base font-semibold text-white">Source A · Pieter Schaghen reports the “purchase” (1626)</h3>
+              <span class="inline-flex items-center rounded-full border border-white/20 px-2 py-1 text-[11px] uppercase tracking-wide text-white/70">Letter excerpt</span>
+            </header>
+            <p class="mt-2 text-sm text-white/80">
+              Dutch West India Company representative Pieter Schaghen wrote to his directors about trade around New Amsterdam. He bragged that the company obtained the island of Manhattan for 60 guilders’ worth of trade goods.
+            </p>
+            <blockquote class="mt-3 rounded-lg border border-white/10 bg-slate-900/60 p-3 text-sm text-white/80">
+              “They have purchased the Island of Manhattes from the Indians for the value of 60 guilders. It is 11,000 morgens in size.”
+            </blockquote>
+            <p class="mt-3 text-sm text-white/70">
+              Note the author’s job and audience. Consider how reporting a profitable bargain might make the company appear successful while ignoring how the Munsee Lenape interpreted the exchange.
+            </p>
+          </section>
+
+          <section id="source-b" data-coach-section="Source B"
+            data-coach-help='{"where":"Source B","tips":["Sourcing: Hand-drawn map of New Amsterdam, 1660.","Evidence: Name two features that show Dutch priorities.","Bias: A city map centers colonists. Native presence is not mapped."],"stems":["This map was made in ","It shows ","This suggests that ","The map leaves out "],"model":"The map emphasizes Dutch streets, walls, and trade, which reduces Indigenous presence to silence."}'
+            class="rounded-xl border border-white/10 bg-white/5 p-4">
+            <header class="flex flex-wrap items-start justify-between gap-3">
+              <h3 class="text-base font-semibold text-white">Source B · 1660 map of New Amsterdam</h3>
+              <span class="inline-flex items-center rounded-full border border-white/20 px-2 py-1 text-[11px] uppercase tracking-wide text-white/70">Map analysis</span>
+            </header>
+            <p class="mt-2 text-sm text-white/80">
+              This hand-drawn city plan shows Dutch streets, fortifications, and trading posts. Walls, warehouses, and ship docks fill the waterfront while Native spaces are absent.
+            </p>
+            <ul class="mt-3 list-disc space-y-1 ml-5 text-sm text-white/70">
+              <li>Spot the defensive wall that later became Wall Street.</li>
+              <li>Identify markets, harbors, or warehouses that reveal economic priorities.</li>
+              <li>Notice what the map does not label about Munsee Lenape land or homes.</li>
+            </ul>
+          </section>
+
+          <section id="source-c" data-coach-section="Source C"
+            data-coach-help='{"where":"Source C","tips":["Sourcing: Encyclopedia entry for background.","Evidence: Track movement and removals over time.","Bias: Reference text aims to inform. It can be brief and miss voices."],"stems":["According to Source C, ","This shows that ","Over time the Munsee ","A limitation is "],"model":"Source C shows repeated westward movement and later removals, which suggests long term harm."}'
+            class="rounded-xl border border-white/10 bg-white/5 p-4">
+            <header class="flex flex-wrap items-start justify-between gap-3">
+              <h3 class="text-base font-semibold text-white">Source C · Background on Munsee Lenape movement</h3>
+              <span class="inline-flex items-center rounded-full border border-white/20 px-2 py-1 text-[11px] uppercase tracking-wide text-white/70">Reference text</span>
+            </header>
+            <p class="mt-2 text-sm text-white/80">
+              A reference entry traces how Lenape communities were pushed west from the Hudson River region to Pennsylvania, Ohio, Indiana, Kansas, and eventually Wisconsin and Oklahoma.
+            </p>
+            <p class="mt-3 text-sm text-white/70">
+              Track the timeline of relocations. Which moves happened soon after the Dutch arrival? Which occurred after the United States formed? Use this context to evaluate long-term impacts of the Manhattan exchange.
+            </p>
+          </section>
+
+          <section id="source-d" data-coach-section="Source D"
+            data-coach-help='{"where":"Source D","tips":["Sourcing: Modern Wisconsin map with present day Native Nations.","Evidence: Find Stockbridge-Munsee Community and compare to Manhattan.","Bias: A modern locator. It does not explain how they got there."],"stems":["The map shows ","This location is far from ","This supports the idea that "],"model":"Seeing Stockbridge-Munsee in Wisconsin far from Manhattan supports the claim that the sale did not benefit the Munsee."}'
+            class="rounded-xl border border-white/10 bg-white/5 p-4">
+            <header class="flex flex-wrap items-start justify-between gap-3">
+              <h3 class="text-base font-semibold text-white">Source D · Present-day Native Nations in Wisconsin</h3>
+              <span class="inline-flex items-center rounded-full border border-white/20 px-2 py-1 text-[11px] uppercase tracking-wide text-white/70">Modern map</span>
+            </header>
+            <p class="mt-2 text-sm text-white/80">
+              A current Wisconsin map highlights federally recognized nations, including the Stockbridge-Munsee Community. Compare its location to Manhattan to visualize the distance between the Munsee homeland and where many descendants live now.
+            </p>
+            <p class="mt-3 text-sm text-white/70">
+              Use the scale and surrounding cities to describe how far the community traveled. Explain how this supports or challenges claims about the benefits of the 1626 exchange.
+            </p>
+          </section>
+
+          <section id="race" data-coach-section="RACE Response"
+            data-coach-help='{"where":"RACE","tips":["Restate the question as a statement.","Answer with a clear claim.","Cite two short quotes or details with Source names.","Explain how each quote proves your claim."],"stems":["The Munsee Lenape did/did not benefit because ","For example, Source A states ","Also, Source C shows ","This proves the claim because "],"model":"The Munsee Lenape did not benefit because the sale led to loss of land and later removals (Source C). The modern map shows their community far from Manhattan (Source D), which supports harm rather than benefit."}'
+            class="rounded-xl border border-white/10 bg-white/5 p-4 relative">
+            <header class="flex items-center justify-between gap-3">
+              <h3 class="text-base font-semibold text-white">RACE Response</h3>
+              <span class="text-xs uppercase tracking-wide text-white/60">Write last</span>
+            </header>
+            <p class="mt-3 text-sm text-white/80">
+              Pull together your evidence to answer the mission question. Restate the claim, cite at least two sources, and explain how the evidence proves your stance about who benefited from the sale of Manhattan.
+            </p>
+            <label for="race-response" class="mt-4 block text-xs font-semibold uppercase tracking-wide text-white/60">Draft your paragraph</label>
+            <textarea id="race-response" class="mt-2 w-full rounded-lg border border-white/20 bg-slate-900/60 p-3 text-sm text-white placeholder-white/40 focus:border-white/40 focus:ring-1 focus:ring-white/40" rows="6" placeholder="Restate, Answer, Cite, Explain."></textarea>
+            <p class="mt-2 text-xs text-white/60">Use sentence stems or the model if you get stuck. Credit the source name in parentheses.</p>
+          </section>
+        </div>
+
+        <aside class="space-y-4">
+          <section class="rounded-xl border border-white/10 bg-white/5 p-3">
+            <h3 class="text-sm font-semibold text-white">Tools</h3>
+            <ul class="mt-2 space-y-1 text-xs text-white/80">
+              <li>Toggle the highlighter in the top toolbar (keys 1–4 for quick colors).</li>
+              <li>Click glossary words to view pronunciation, definitions, and tone notes.</li>
+              <li>Use the translation menu for Spanish or Arabic guidance.</li>
+            </ul>
+          </section>
+          <section class="rounded-xl border border-white/10 bg-white/5 p-3">
+            <h3 class="text-sm font-semibold text-white">Keyboard help</h3>
+            <ul class="mt-2 space-y-1 text-xs text-white/80">
+              <li><span class="font-semibold">1</span> Blue · <span class="font-semibold">2</span> Yellow · <span class="font-semibold">3</span> Red · <span class="font-semibold">4</span> Erase</li>
+              <li><span class="font-semibold">Ctrl/⌘ + Enter</span> submits the active form if available.</li>
+              <li>Use Tab/Shift+Tab to move between inputs without touching the mouse.</li>
+            </ul>
+          </section>
+          <!-- Context-aware Coach help -->
+          <section id="context-coach" class="mt-4 rounded-xl border border-white/10 bg-white/5 p-3">
+            <h3 class="text-sm font-semibold text-white flex items-center gap-2">
+              <img src="https://cdn-icons-png.flaticon.com/512/3475/3475033.png" alt="" class="h-5 w-5" aria-hidden="true" loading="lazy"> Coach Help
+            </h3>
+            <p id="coach-where" class="mt-1 text-xs text-white/70">Mission</p>
+            <ul id="coach-tips" class="mt-2 list-disc ml-4 space-y-1 text-sm text-white/90">
+              <li>Read the mission. Then do each source step in order.</li>
+            </ul>
+            <div id="coach-stems" class="mt-3 hidden">
+              <p class="text-xs text-white/70 mb-1">Sentence starters</p>
+              <div id="coach-stem-buttons" class="flex flex-wrap gap-2"></div>
+            </div>
+            <button id="coach-insert-model" type="button"
+                    class="mt-3 hidden text-xs underline text-white/80">
+              Insert model sentence
+            </button>
+          </section>
+        </aside>
+      </div>
+    </div>
+  </section>
+
   <!-- Container -->
   <div class="bg-white max-w-4xl mx-auto my-8 p-4 sm:p-8 md:p-12 rounded-lg shadow-lg">
 
@@ -1789,6 +1935,103 @@
     setLang("en");
     select.addEventListener("change", () => setLang(select.value));
   })();
+  </script>
+
+  <script>
+(() => {
+  const coachBox = document.getElementById("context-coach");
+  const whereEl = document.getElementById("coach-where");
+  const tipsEl = document.getElementById("coach-tips");
+  const stemsWrap = document.getElementById("coach-stems");
+  const stemsBtns = document.getElementById("coach-stem-buttons");
+  const insertModelBtn = document.getElementById("coach-insert-model");
+
+  if (!coachBox) return;
+
+  // Sections that carry help
+  const helpSections = Array.from(document.querySelectorAll("[data-coach-help]"));
+
+  // Put mission first if present
+  let active = helpSections[0] || null;
+
+  // Render help into the Coach box
+  function renderHelp(section){
+    if (!section) return;
+
+    const data = safeParse(section.getAttribute("data-coach-help"));
+    if (!data) return;
+
+    whereEl.textContent = data.where || section.id || "Section";
+    tipsEl.innerHTML = "";
+    (data.tips || []).forEach(t=>{
+      const li = document.createElement("li");
+      li.className = "text-white/90";
+      li.textContent = t;
+      tipsEl.appendChild(li);
+    });
+
+    // Stems
+    stemsBtns.innerHTML = "";
+    const stems = data.stems || [];
+    stemsWrap.classList.toggle("hidden", stems.length === 0);
+    stems.forEach(stem=>{
+      const b = document.createElement("button");
+      b.type = "button";
+      b.className = "text-xs rounded bg-white/10 px-2 py-1 text-white hover:bg-white/20";
+      b.textContent = stem.length > 40 ? stem.slice(0,38) + "…" : stem;
+      b.title = stem;
+      b.addEventListener("click", ()=>insertStem(stem));
+      stemsBtns.appendChild(b);
+    });
+
+    // Model
+    if (data.model) {
+      insertModelBtn.classList.remove("hidden");
+      insertModelBtn.onclick = ()=>insertStem(data.model);
+    } else {
+      insertModelBtn.classList.add("hidden");
+      insertModelBtn.onclick = null;
+    }
+  }
+
+  // Insert stems or model in the most relevant textarea in the active section
+  function insertStem(text){
+    if (!active) return;
+    const ta = active.querySelector("textarea") || document.querySelector("#race textarea");
+    if (!ta) return;
+    ta.value = (ta.value || "") + (ta.value ? " " : "") + text;
+    ta.dispatchEvent(new Event("input", {bubbles:true}));
+    ta.focus();
+  }
+
+  // Observe which section is in view
+  const obs = new IntersectionObserver((entries)=>{
+    // Pick the entry with greatest intersection ratio
+    let best = null;
+    let bestRatio = 0;
+    entries.forEach(e=>{
+      if (e.isIntersecting && e.intersectionRatio > bestRatio) {
+        best = e.target;
+        bestRatio = e.intersectionRatio;
+      }
+    });
+    if (best && best !== active) {
+      active = best;
+      renderHelp(active);
+    }
+  }, { root: null, threshold: buildThresholds() });
+
+  helpSections.forEach(s => obs.observe(s));
+  renderHelp(active);
+
+  function safeParse(s){ try { return JSON.parse(s); } catch { return null; } }
+  function buildThresholds(){
+    // more granular thresholds so the largest visible wins
+    const t = [];
+    for (let i=0;i<=1;i+=0.1) t.push(parseFloat(i.toFixed(2)));
+    return t;
+    }
+})();
   </script>
 
   <!-- Hidden target so the page doesn't navigate when we submit to Google Form -->
