--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
   <!-- Inquiry workbook + Coach panel -->
   <section class="bg-slate-900 text-white py-8">
     <div class="max-w-6xl mx-auto px-4 lg:px-6">
-      <div class="lg:grid lg:grid-cols-[minmax(0,2.2fr)_minmax(0,1fr)] gap-6">
+      <div class="lg:grid lg:grid-cols-[minmax(0,2.2fr)_minmax(0,1fr)] lg:items-start gap-6">
         <div class="space-y-4">
           <section id="mission" aria-labelledby="mission-title"
             data-coach-help='{"where":"Mission","tips":["Goal: Decide if the Munsee Lenape benefited from the sale of Manhattan.","Work in order: A then B then C then D then write RACE.","Use highlights and cite short quotes with quotation marks."],"stems":["My job today is to ","I will check each source for ","My claim will be that "]}'
@@ -314,7 +314,7 @@
           </section>
         </div>
 
-        <aside class="space-y-4">
+        <aside class="space-y-4 lg:sticky lg:top-8 lg:self-start">
           <section class="rounded-xl border border-white/10 bg-white/5 p-3">
             <h3 class="text-sm font-semibold text-white">Tools</h3>
             <ul class="mt-2 space-y-1 text-xs text-white/80">
